# ML-Zoomcamp-2025

./: README.md
01-intro/: Git_Info.ipynb  Homework.ipynb  Linear Algebra.ipynb  Numpy.ipynb  Pandas.ipynb
02-Regression/: Notebook.ipynb
03-Classification/: Notebook.ipynb
04-Evaluation/: Homework.ipynb  Notebook.ipynb
05-Deployment/: Notebook.ipynb
05-Deployment/Homework/: Dockerfile  main_v1.py  main_v2.py  pyproject.toml  score_v1.py  test_q4.py
06-Decision Trees and Ensemble Learning/Homework/: Homework.ipynb
