[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
    "numpy",
    "scipy",
    "pydantic"
]

[project.scripts]
homework = "homework:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
